# srl-gnmi-bandwidth-poc

./: .envrc  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
configs/: p1.cfg  pe1.cfg  pe2.cfg
docs/: what-are-we-simulating.md
scripts/: connectivity-test.sh  deploy.sh  destroy.sh  push-config.sh
src/: bandwidth.py  demo.py  mcp_server.py  models.py
srl_bandwidth/: bandwidth.py  demo.py  mcp_server.py
topology/: bandwidth-poc.clab.yml
