[project]
name = "srl-gnmi-bandwidth-poc"
version = "0.1.0"
description = "SR Linux gNMI bandwidth allocation PoC — network service activation layer for autonomous agent-to-agent provisioning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iperf3>=0.1.11",
    "pygnmi>=0.8.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]
