[project]
name = "srl-bandwidth"
version = "0.1.0"
description = "SR Linux gNMI bandwidth allocation PoC — network service activation layer for autonomous agent-to-agent provisioning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iperf3>=0.1.11",
    "mcp[cli]>=1.27.0",
    "pygnmi>=0.8.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["srl_bandwidth"]
